# cubrid

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README  build.sh  csql.err
.github/workflows/: codestyle.yml
broker/: CMakeLists.txt
cas/: CMakeLists.txt
cs/: CMakeLists.txt
cubrid/: CMakeLists.txt
demo/: CMakeLists.txt  SpJDBCTest.java  SpPrepareTest.java  SpTest.java  demodb_schema  make_cubrid_demo.sh
java/: CMakeLists.txt  build.xml  ivy.xml  ivysettings.xml  jcas.sh
jcas/: CMakeLists.txt  build.xml  jcas.sh
jdbc/: CMakeLists.txt  build.xml
jsp/: build.xml  ivy.xml  ivysettings.xml
pl_engine/: CMakeLists.txt
sa/: CMakeLists.txt
src/base/: chartype.c  cublocale.hpp  cubrid_locale.hpp  cubrid_regex_traits.hpp  memory_alloc.c  memory_alloc.h  memory_alloc_fixed.c  memory_alloc_fixed.h  memory_alloc_sa.c  memory_alloc_sa.h  memory_alloc_ws.c  memory_hash.c  memory_monitor_sr.cpp  memory_monitor_sr.hpp  object_representation.h  packer.cpp  packer.hpp  porting.h  porting_inline.hpp  posix_shm.c  posix_shm.h  system_parameter.c  system_parameter.h  xserver_interface.h
src/broker/: broker_admin_pub.c  broker_admin_so.c  broker_config.c  broker_config.h  broker_filename.c  broker_filename.h  broker_tester.c  cas.c  cas.h  cas_common.h  cas_execute.c  cas_execute.h  cas_function.c  cas_handle.c  cas_handle.h  cas_info.c  cas_info.h  cas_procedure.c  cas_procedure.h  cas_sql_log2.h
src/cci/: cas_cci.h
src/communication/: network.h  network_cl.c  network_cl_unused.c  network_common.cpp  network_interface_cl.c  network_interface_cl.h  network_interface_sr.c  network_interface_sr.h  network_sr.c
src/compat/: db_geos.hpp  db_spatial.cpp  db_spatial.hpp  db_spatial_geometry.hpp  dbtype_def.h  dbtype_function.h  dbtype_function.i
src/connection/: connection_cl.c
src/executables/: csql.c  csql_result_format.c  javasp.cpp  plcsql.cpp  unload_object.c  util_common.c
src/jcas/: .classpath  .gitignore  .project
src/jdbc/: .classpath
src/jsp/: jsp_cl.c  jsp_cl.h  jsp_comm.c  jsp_comm.h  jsp_connection.hpp  jsp_packing.cpp  jsp_packing.hpp  jsp_sr.c  jsp_sr.h  jsp_tt.hpp
src/loaddb/: load_object.c
src/method/: method_callback.cpp  method_callback.hpp  method_connection_cl.cpp  method_connection_cl.hpp  method_connection_java.cpp  method_connection_pool.cpp  method_def.cpp  method_def.hpp  method_error_handler.cpp  method_error_handler.hpp  method_invoke_builtin.cpp  method_invoke_group.cpp  method_invoke_group.hpp  method_invoke_java.cpp  method_oid_handler.cpp  method_oid_handler.hpp  method_query_handler.cpp  method_query_handler.hpp  method_runtime_context.cpp  method_runtime_context.hpp  method_scan.cpp  method_struct_invoke.cpp  method_struct_invoke.hpp  method_struct_query.cpp  method_struct_value.cpp  query_method.cpp
src/object/: authenticate.c  authenticate.h  authenticate_context.hpp  class_builder.hpp  class_object.c  object_accessor.c  object_accessor.h  object_primitive.c  object_primitive.h  object_representation.c  schema_manager.c  schema_system_catalog.cpp
src/optimizer/: query_graph.c  query_rewrite.c
src/parser/: csql_grammar.y  csql_lexer.l  expr_type.cpp  expr_type.hpp  func_type.cpp  keyword.c  method_transform.c  name_resolution.c  parse_dbi.c  parse_evaluate.c  parse_tree.h  parse_tree_cl.c  parse_type.cpp  parse_type.hpp  parser.h  parser_message.h  parser_support.c  semantic_check.c  type_check.c  type_check.h  type_check_expr.cpp  type_check_expr.hpp  type_check_expr_def.cpp  type_check_func.cpp  type_check_func.hpp  type_check_helper.hpp  type_check_op_def.hpp  type_checking.c  type_eval_expr.cpp  type_eval_expr.hpp  type_eval_func.cpp  type_eval_func.hpp  view_transform.c  xasl_generation.c  xasl_regu_alloc.cpp  xasl_regu_alloc.hpp
src/query/: cursor.c  cursor.h  execute_schema.c  execute_statement.c  fetch.c  list_file.c  method_callback.cpp  method_callback.hpp  method_def.hpp  (+43 more)
util/: CMakeLists.txt
(+206 files in other folders)
